--- a/app/views/pet_profiles/show.html.erb
+++ b/app/views/pet_profiles/show.html.erb
@@ -1,9 +1,11 @@
 <section>
   <h1 class="text-blue-700"><%= @pet.name %>'s Page</h1>
   <section class="mb-2 border border-amber-700" data-controller="presentation">
-    <button data-action="click->presentation#toggleVisibility">add supply</button>
     <h2>Supplies</h2>
-    <%= form_with model: [@pet, Supply.new], class: "add-supply-form hidden" do |form| %>
+    <button data-action="click->presentation#toggleVisibility">add supply</button>
+    <%= form_with model: [@pet, Supply.new], 
+      data: { "presentation-target": "visibility" },
+      class: "hidden" do |form| %>
       <div class="border border-orange-700">
         <%= form.label :name, style: "display: block" %>
         <%= form.text_field :name %>
@@ -32,9 +34,11 @@
     <h2>Health</h2>
   </section>
   <section class="mb-2 border border-amber-700" data-controller="presentation">
-    <button data-action="click->presentation#toggleVisibility">add supply</button>
+    <button data-action="click->presentation#toggleVisibility">add chore</button>
     <h2>Chore</h2>
-    <%= form_with model: [@pet, Task.new], class: "add-task-form hidden" do |form| %>
+    <%= form_with model: [@pet, Task.new],
+      data: { "presentation-target": "visibility" },
+      class: "hidden" do |form| %>
       <div class="border border-orange-700">
         <%= form.label :title, style: "display: block" %>
         <%= form.text_field :title %>
