setup tasks and supplies pages for pet pages and all tasks/supplies index pages. TODO: dry up the index action logic in tasks and supplies controllers... set up tasks edit page and update action.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
     <nav>
       <%= link_to "Home", root_path %>
       <%= link_to "Supplies", supplies_path %>
+      <%= link_to "Tasks", tasks_path %>
     </nav>
     <div><%= notice %></div>
     <main class="container mx-auto mt-28 px-5 flex">
