--- a/app/views/supplies/index.html.erb
+++ b/app/views/supplies/index.html.erb
@@ -8,16 +8,7 @@
       <button data-action="click->presentation#clearAllFilters">clear all filters</button>
     </div>
     <% @supplies.each do |pet_name, pet_supplies| %>
-      <div id="<%= pet_name %>" class="pet-supply-card border-2 border-orange-700 mb-2 p-1" data-presentation-target="card">
-        <h3 class="font-semibold" data-filter-test="wtf"><%= pet_name %>'s Supplies!</h3>
-        <% pet_supplies[:supplies].each do |supply| %>
-          <div class="mb-1 ps-1 border border-amber-300">
-            <div><span class="font-semibold">Name</span> <%= supply.name %></div>
-            <div><span class="font-semibold">Brand</span> <%= supply.brand %></div>
-            <div><span class="font-semibold">Inventory</span> <%= supply.inventory_count %></div>
-          </div>
-          <% end %>
-      </div>
+      <%= render partial: "supply", locals: { pet_name: pet_name, pet_supplies: pet_supplies } %>
     <% end %>
   </div>
 </section>
