needed the hash map to map arg to controller in items_by_pet. passing in symbol to the get_items_sorted_by_pet method. reuse form partials.

--- a/app/views/pet_profiles/show.html.erb
+++ b/app/views/pet_profiles/show.html.erb
@@ -52,6 +52,6 @@
 
     <button data-action="click->presentation#toggleVisibility">add task</button>
 
-    <%= render "tasks/form", pet: @pet %>
+    <%= render partial: "tasks/form", locals: { pet: @pet, task: Task.new } %>
   </div>
 </section>
