--- a/app/views/pet_profiles/show.html.erb
+++ b/app/views/pet_profiles/show.html.erb
@@ -9,36 +9,14 @@
       <%= render partial: "supplies/supply", locals: { pet_name: pet_name, pet_supplies: pet_supplies } %>
     <% end %>
     <button data-action="click->presentation#toggleVisibility">add supply</button>
-    <%= form_with model: [@pet, Supply.new], 
-      data: { "presentation-target": "visibility" },
-      class: "hidden" do |form| %>
-      <div class="border border-orange-700">
-        <%= form.label :name, style: "display: block" %>
-        <%= form.text_field :name %>
-      </div>
 
-      <div class="border border-orange-700">
-        <%= form.label :brand, style: "display: block" %>
-        <%= form.text_field :brand %>
-      </div>
-
-      <div class="border border-orange-700">
-        <%= form.label :inventory_count, style: "display: block" %>
-        <%= form.number_field :inventory_count %>
-      </div>
-
-      <div class="border border-orange-700">
-        <%= form.label :type, style: "display: block" %>
-        <%= form.select :type, ['Food', 'Medication', 'Poop Bag', 'Litter', 'other'] %>
-      </div>
-
-      <%= form.submit "Submit" %>
-    <% end %>
+    <%= render partial: "supplies/form", locals: { pet: @pet, supply: Supply.new } %>
   </div>
 
   <div>
     <h2>Health</h2>
   </div>
+
   <div class="mb-2 border border-amber-700 flex gap-2" data-controller="presentation">
     <div>
       <%= link_to pet_profile_tasks_path(@pet) do %>
