--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
       <%= link_to "Home", root_path %>
       <%= link_to "Supplies", supplies_path %>
       <%= link_to "Tasks", tasks_path %>
+      <%= link_to "Appointments", appointments_path %>
     </nav>
     <div><%= notice %></div>
     <main class="container mx-auto mt-28 px-5 flex">
