--- a/app/views/appointments/_appointments.html.erb
+++ b/app/views/appointments/_appointments.html.erb
@@ -7,9 +7,11 @@
       <p><b>start:</b> <%= appointment.appt_start %></p>
       <p><b>end:</b> <%= appointment.appt_end %></p>
       <p><b>notes:</b> <%= appointment.notes %></p>
-      <%= link_to "Edit", edit_appointment_path(appointment) %>
-      <button>Delete</button>
-      <button>Mark Complete</button>
+      <div class="p1">
+        <%= link_to "Edit", edit_appointment_path(appointment), class: "p-1 border border-blue-700" %>
+        <button class="p-1 border border-blue-700">Delete</button>
+        <button class="p-1 border border-blue-700">Mark Complete</button>
+      </div>
     </div>
     <% end %>
 </div>
