--- a/app/views/pet_profiles/index.html.erb
+++ b/app/views/pet_profiles/index.html.erb
@@ -4,13 +4,15 @@
     <h2 class="font-semibold">Your Pet<%= "s" if @pets.length > 1 %></h2>
     <% @pets.each do |pet| %>
       <%= link_to pet do %>
-        <div class="mb-1 border">
+        <div class="mb-2 border">
           <h1><%= pet.name %></h1>
           <div>
             <p><%= pet.animal %></p>
             <p>birthday: <%= pet.dob %></p>
             <p>gender: <%= pet.gender %></p>
           </div>
+          <%= link_to "Edit", edit_pet_profile_path(pet) %>
+          <%= link_to "Delete", pet, method: :delete, data: { turbo_confirm: "Are you sure?" } %>
         </div>
       <% end %>
     <% end %>
