add pet profile create page

--- a/app/views/pet_profiles/index.html.erb
+++ b/app/views/pet_profiles/index.html.erb
@@ -16,5 +16,6 @@
         </div>
       <% end %>
     <% end %>
+    <%= link_to "Add a Pet", new_pet_profile_path, class: "border border-blue-700" %>
   </section>
 </section>
