rename type in supplies schema to supply_type to avoid using reserved keyword; add destroy actions to appointments and supplies.

--- a/app/views/appointments/_appointments.html.erb
+++ b/app/views/appointments/_appointments.html.erb
@@ -9,8 +9,8 @@
       <p><b>notes:</b> <%= appointment.notes %></p>
       <div class="p1">
         <%= link_to "Edit", edit_appointment_path(appointment), class: "p-1 border border-blue-700" %>
-        <button class="p-1 border border-blue-700">Delete</button>
         <button class="p-1 border border-blue-700">Mark Complete</button>
+        <%= button_to "Delete", appointment, method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "p-1 border border-blue-700" %>
       </div>
     </div>
     <% end %>
