--- a/app/views/supplies/_form_fields.html.erb
+++ b/app/views/supplies/_form_fields.html.erb
@@ -14,6 +14,6 @@
 </div>
 
 <div class="border border-orange-700">
-  <%= form.label :type, style: "display: block" %>
-  <%= form.select :type, ['Food', 'Medication', 'Poop Bag', 'Litter', 'other'] %>
+  <%= form.label :supply_type, style: "display: block" %>
+  <%= form.select :supply_type, ['Food', 'Medication', 'Poop Bag', 'Litter', 'other'] %>
 </div>
