--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,9 @@
   <body>
     <nav>
       <%= link_to "Home", root_path %>
-      <%= link_to "Supplies", supplies_path %>
-      <%= link_to "Tasks", tasks_path %>
-      <%= link_to "Appointments", appointments_path %>
+      <%= link_to "All Supplies", supplies_path, class: "mx-2 border border-blue-700" %>
+      <%= link_to "All Tasks", tasks_path, class: "mx-2 border border-blue-700" %>
+      <%= link_to "All Appointments", appointments_path, class: "mx-2 border border-blue-700" %>
     </nav>
     <div><%= notice %></div>
     <main class="container mx-auto mt-28 px-5 flex">
