start moving create item forms to their own new pages

--- a/app/views/pet_profiles/index.html.erb
+++ b/app/views/pet_profiles/index.html.erb
@@ -9,9 +9,9 @@
       </div>
     <% end %>
   </div>
-  <section>
+  <div>
     <h1 class="bg-sky-50 font-bold text-4xl">Pet Profiles</h1>
-    <section>
+    <div>
       <h2 class="font-semibold">Your Pet<%= "s" if @pets.length > 1 %></h2>
       <% @pets.each do |pet| %>
         <%= link_to pet do %>
@@ -28,6 +28,6 @@
         <% end %>
       <% end %>
       <%= link_to "Add a Pet", new_pet_profile_path, class: "border border-blue-700" %>
-    </section>
-  </section>
+    </div>
+  </div>
 </section>
