--- a/app/views/supplies/_supplies.html.erb
+++ b/app/views/supplies/_supplies.html.erb
@@ -13,4 +13,5 @@
       </div>
     </div>
   <% end %>
+  <%= link_to "Add Supply for #{pet_name}", new_pet_profile_supply_path(pet_supplies[:pet_profile_id]) %>
 </div>
