--- a/app/views/appointments/_appointments.html.erb
+++ b/app/views/appointments/_appointments.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= pet_name %>"  class="pet-appointment-card border-2 border-orange-700 mb-2 p-1" data-presentation-target="card">
   <h3 class="font-semibold" data-filter-test="wtf"><%= pet_name %>'s Appointments!</h3>
-  <% appointments[:appointments].each do |appointment| %>
+  <% pet_appointments[:appointments].each do |appointment| %>
     <div class="mb-1 ps-1 border border-amber-300">
       <p><b>title:</b> <%= appointment.title %></p>
       <p><b>category:</b> <%= appointment.category %></p>
